apps/code-server/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
  namespace: code-server
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8443
  selector:
    app: code-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: linuxserver/code-server:v3.4.0-ls46
        name: code-server
        ports:
        - containerPort: 8443
          name: code-server
        volumeMounts:
        - name: pv-code-server
          mountPath: /config
      volumes:
      - name: pv-code-server
        persistentVolumeClaim:
          claimName: pvc-code-server
